update the credential setup

--- a/config/credentials_template.ini
+++ b/config/credentials_template.ini
@@ -4,3 +4,5 @@ api_key=<YOUR API KEY>
 api_key=<YOUR API KEY>
 [TAVILY_API_KEY]
 api_key=<YOUR API KEY>
+['HuggingFace_API_KEY']
+api_key=<YOUR API KEY>
