--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,23 @@ numpy
 tqdm
 openpyxl
 pyyaml
-langchain==0.2.5
+langchain==0.3.11
 tiktoken
 pymupdf
 docarray
 jupyterlab
-langchain-core==0.2.9
-langchain-community==0.2.5
-langchain-openai==0.1.14
-openai==1.55.3
+langchain-core
+langchain-community
+langchain-openai
+openai
 sentence-transformers
-rank_bm25==0.2.2
 langserve[all]
-langsmith==0.1.82
+langsmith
 pydub
 wikipedia
 faiss-cpu
 semantic-chunkers
 opencv-python
 pypdf
+lark
+rank_bm25
