--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@ tiktoken
 pymupdf
 docarray
 jupyterlab
-langchain-core
-langchain-community
-langchain-openai
-openai
+langchain-core==0.3.37
+langchain-community==0.3.11
+langchain-openai==0.2.14
+langchain-ollama==0.2.3
+openai==1.58.1
 sentence-transformers
 langserve[all]
 langsmith
@@ -24,3 +25,5 @@ pypdf
 lark
 rank_bm25
 httpx==0.27.2
+sentencepiece
+langchain-ollama
