--- a/tutorial/DataScienceIntro/requirements.txt
+++ b/tutorial/DataScienceIntro/requirements.txt
@@ -1,9 +1,6 @@
 optuna-integration
-lightgbm
-xgboost
-catboost
 optuna
-pytorch-forecasting==1.3.0
+pytorch-forecasting[mqf2]==1.3.0
 lightning==2.5.0.post0
 tensorboard
 optuna
