--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,17 @@ numpy
 tqdm
 openpyxl
 pyyaml
-langchain==0.3.11
+langchain==0.3.20
 tiktoken
 pymupdf
 docarray
 jupyterlab
-langchain-core==0.3.37
-langchain-community==0.3.11
-langchain-openai==0.2.14
+langchain-core==0.3.45
+langchain-community==0.3.19
+langchain-openai==0.3.8
 langchain-ollama==0.2.3
-openai==1.58.1
+openai==1.66.3
+langchain-deepseek
 sentence-transformers
 langserve[all]
 langsmith
@@ -26,4 +27,3 @@ lark
 rank_bm25
 httpx==0.27.2
 sentencepiece
-langchain-ollama
