Modify the requirements.txt; Week-1: update the noteook; Week-7: update the notebook

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,24 +3,24 @@ numpy
 tqdm
 openpyxl
 pyyaml
-langchain==0.3.20
 tiktoken
 pymupdf
 docarray
 jupyterlab
-langchain-core==0.3.45
-langchain-community==0.3.19
-langchain-openai==0.3.9
-langchain-ollama==0.2.3
-openai==1.109.1
-langchain-deepseek
+langchain==1.0.2
+langchain-core==1.0.1
+langchain-community==0.4.1
+langchain-openai==1.0.1
+langchain-ollama==1.0.0
+langchain-huggingface==1.0.0
+langchain-google-genai==3.0.0
+langchain-deepseek==1.0.0
+langgraph==1.0.1
 sentence-transformers
 langserve[all]
-langsmith
 pydub
 wikipedia
 faiss-cpu
-semantic-chunkers
 opencv-python
 pypdf
 lark
@@ -29,11 +29,7 @@ httpx==0.27.2
 sentencepiece
 pillow
 uvicorn
-langchain-google-genai==2.1.12
 wikipedia-api
 fugashi
 unidic-lite
-openai-agents=0.3.3
-openai-agents[litellm]
-litellm[proxy]
 jupyterlabcodetoc
